pass at the trainer editor gui